Commenting a picture deletes its Color Profile tag, changing its colors
Hello, these are the steps to reproduce this bug on gThumb 3.12.2 (on Fedora 38). NB: It only happens for some files, I can't tell what makes those files susceptible to the bug, but where it applies it does so consistently.
- Download either [a], [b] or [c]
a https://upload.wikimedia.org/wikipedia/commons/0/0d/La_velada%2C_por_Rafael.jpg
b https://upload.wikimedia.org/wikipedia/commons/1/1d/Gerrit_Adriaensz.Berckheyde_De_bocht_van_de_Herengracht%281671-1672%29.jpg
c https://upload.wikimedia.org/wikipedia/commons/d/d2/ESO_Centaurus_A_LABOCA.jpg - Write a comment (press
c
, write something, pressAlt-s
). - Close gThumb and re-open the image.
- You should be able to see that the colors changed quite a lot and that the Color Profile tag under the metadata section of the Info pane (the one that you can toggle with
i
) is gone.
Edited by Andrea