Commenting a picture deletes its Color Profile tag

This only happened when the 'Store metadata inside files if possible'
option was active.

Fixes https://gitlab.gnome.org/GNOME/gthumb/-/issues/293